--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -460,6 +460,18 @@ display: block;
 .modal-title{
   color: #2f435e;
 }
+.button-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+.calendar-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 20px;
+}
 
 .modal-content {
   background-color: #ececec; /* Couleur de fond */
